Add dependency-aware ordering to `FieldSortingCheck` and `ConstructorAssignmentOrderCheck`