@@ -17,8 +17,11 @@ public class NoArrayTrailingCommaCheckTest {
 	public void testTrailingCommaViolation() throws Exception {
 		final var violations = BaseCheckTest.runCheck(NoArrayTrailingCommaCheck.class, DIR + "InputArrayCommaViolation.java");
 		assertEquals(3, violations.size());
-		assertEquals(4, violations.getFirst().getLine());
+		assertEquals(4, violations.get(0).getLine());
+		assertEquals("No trailing comma in array initializer.", violations.get(0).getMessage());
 		assertEquals(5, violations.get(1).getLine());
+		assertEquals("No trailing comma in array initializer.", violations.get(1).getMessage());
 		assertEquals(8, violations.get(2).getLine());
+		assertEquals("No trailing comma in array initializer.", violations.get(2).getMessage());
 	}
 }
